weechat: Update settings

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- irc.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [look]
 buffer_open_before_autojoin = on
@@ -143,6 +150,7 @@ ssl_dhkey_size = 2048
 ssl_fingerprint = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
+usermode = ""
 username = ""
 
 [server]
@@ -171,6 +179,7 @@ foonetic.nicks_alternate
 foonetic.username
 foonetic.realname
 foonetic.local_hostname
+foonetic.usermode
 foonetic.command
 foonetic.command_delay
 foonetic.autojoin = "#xkcd,#bucket,#bucketlog,#xkcd-tardis,#xkcd-signal,#xkcd-noise,#xkcd-minecraft,#xkcd-compsci"
@@ -210,6 +219,7 @@ freenode.nicks_alternate
 freenode.username
 freenode.realname
 freenode.local_hostname
+freenode.usermode
 freenode.command
 freenode.command_delay
 freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot,#transmission,#linageos #android #cyanogenmod"
@@ -249,9 +259,10 @@ furnet.nicks_alternate
 furnet.username
 furnet.realname
 furnet.local_hostname
+furnet.usermode
 furnet.command
 furnet.command_delay
-furnet.autojoin = "#gamerfurs,#redditfurs,#SoftPaws,#uk"
+furnet.autojoin = "#gamerfurs,#SoftPaws"
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -288,6 +299,7 @@ twitch.nicks_alternate
 twitch.username
 twitch.realname
 twitch.local_hostname
+twitch.usermode
 twitch.command
 twitch.command_delay
 twitch.autojoin = "#nerdcubed,#rossbroadcast"
@@ -327,6 +339,7 @@ nixers.nicks_alternate
 nixers.username
 nixers.realname
 nixers.local_hostname
+nixers.usermode
 nixers.command
 nixers.command_delay
 nixers.autojoin = "#unix"
@@ -366,6 +379,7 @@ bitlbee.nicks_alternate
 bitlbee.username
 bitlbee.realname
 bitlbee.local_hostname
+bitlbee.usermode
 bitlbee.command
 bitlbee.command_delay
 bitlbee.autojoin = "&bitlbee,#twitter_zamjnw5,&steam"
@@ -405,6 +419,7 @@ overthewire.nicks_alternate
 overthewire.username
 overthewire.realname
 overthewire.local_hostname
+overthewire.usermode
 overthewire.command
 overthewire.command_delay
 overthewire.autojoin
@@ -444,6 +459,7 @@ oftc.nicks_alternate
 oftc.username
 oftc.realname
 oftc.local_hostname
+oftc.usermode
 oftc.command
 oftc.command_delay
 oftc.autojoin
@@ -458,3 +474,83 @@ oftc.msg_kick
 oftc.msg_part
 oftc.msg_quit
 oftc.notify
+quakenet.addresses = "azubu.uk.quakenet.org"
+quakenet.proxy
+quakenet.ipv6
+quakenet.ssl
+quakenet.ssl_cert
+quakenet.ssl_priorities
+quakenet.ssl_dhkey_size
+quakenet.ssl_fingerprint
+quakenet.ssl_verify
+quakenet.password = "MV5QxisMpR"
+quakenet.capabilities
+quakenet.sasl_mechanism
+quakenet.sasl_username
+quakenet.sasl_password
+quakenet.sasl_key
+quakenet.sasl_timeout
+quakenet.sasl_fail
+quakenet.autoconnect
+quakenet.autoreconnect
+quakenet.autoreconnect_delay
+quakenet.nicks
+quakenet.nicks_alternate
+quakenet.username
+quakenet.realname
+quakenet.local_hostname
+quakenet.usermode
+quakenet.command
+quakenet.command_delay
+quakenet.autojoin = "#xonotic"
+quakenet.autorejoin
+quakenet.autorejoin_delay
+quakenet.connection_timeout
+quakenet.anti_flood_prio_high
+quakenet.anti_flood_prio_low
+quakenet.away_check
+quakenet.away_check_max_nicks
+quakenet.msg_kick
+quakenet.msg_part
+quakenet.msg_quit
+quakenet.notify
+rizon.addresses = "irc.rizon.net/9999"
+rizon.proxy
+rizon.ipv6
+rizon.ssl = on
+rizon.ssl_cert
+rizon.ssl_priorities
+rizon.ssl_dhkey_size
+rizon.ssl_fingerprint
+rizon.ssl_verify
+rizon.password
+rizon.capabilities
+rizon.sasl_mechanism
+rizon.sasl_username
+rizon.sasl_password
+rizon.sasl_key
+rizon.sasl_timeout
+rizon.sasl_fail
+rizon.autoconnect
+rizon.autoreconnect
+rizon.autoreconnect_delay
+rizon.nicks
+rizon.nicks_alternate
+rizon.username
+rizon.realname
+rizon.local_hostname
+rizon.usermode
+rizon.command
+rizon.command_delay
+rizon.autojoin = "#3dshacks"
+rizon.autorejoin
+rizon.autorejoin_delay
+rizon.connection_timeout
+rizon.anti_flood_prio_high
+rizon.anti_flood_prio_low
+rizon.away_check
+rizon.away_check_max_nicks
+rizon.msg_kick
+rizon.msg_part
+rizon.msg_quit
+rizon.notify
