--- a/weechat/.config/weechat/plugins.conf
+++ b/weechat/.config/weechat/plugins.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- plugins.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [var]
 fifo.fifo = "on"
@@ -61,6 +68,10 @@ perl.nickregain.quakenet_command = ""
 perl.nickregain.quakenet_command_delay = "0"
 perl.nickregain.quakenet_delay = "60"
 perl.nickregain.quakenet_enabled = "on"
+perl.nickregain.rizon_command = ""
+perl.nickregain.rizon_command_delay = "0"
+perl.nickregain.rizon_delay = "60"
+perl.nickregain.rizon_enabled = "off"
 perl.nickregain.snoonet_command = ""
 perl.nickregain.snoonet_command_delay = "0"
 perl.nickregain.snoonet_delay = "60"
