qutebrowser: Auto update config.
This is going to be a lot cleaner with the config revolution. For now,
the best way to manage it is to just push it.

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -46,7 +46,7 @@ leave-mode
 [normal]
 # Keybindings for normal mode.
 
-clear-keychain ;; search
+clear-keychain ;; search ;; fullscreen --leave
     <escape>
 
 set-cmd-text -s :open
@@ -444,6 +444,15 @@ scroll-page 0 0.5
 
 scroll-page 0 -0.5
     <ctrl-u>
+
+wq
+    ZZ
+
+tab-focus -1
+    g$
+
+tab-pin
+    <ctrl-p>
 
 [insert]
 # Keybindings for insert mode.
