--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -182,7 +182,7 @@ foonetic.local_hostname
 foonetic.usermode
 foonetic.command
 foonetic.command_delay
-foonetic.autojoin = "#xkcd,#bucket,#bucketlog,#xkcd-tardis,#xkcd-signal,#xkcd-noise,#xkcd-minecraft,#xkcd-compsci"
+foonetic.autojoin = "#xkcd,#bucket,#bucketlog,#xkcd-signal,#xkcd-noise,#xkcd-minecraft,#xkcd-compsci"
 foonetic.autorejoin
 foonetic.autorejoin_delay
 foonetic.connection_timeout
@@ -222,7 +222,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot,#transmission,#linageos #android #cyanogenmod"
+freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot,#transmission,#linageos,#beets #android #cyanogenmod"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -262,7 +262,7 @@ furnet.local_hostname
 furnet.usermode
 furnet.command
 furnet.command_delay
-furnet.autojoin = "#gamerfurs,#SoftPaws"
+furnet.autojoin = "#SoftPaws"
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -502,7 +502,7 @@ quakenet.local_hostname
 quakenet.usermode
 quakenet.command
 quakenet.command_delay
-quakenet.autojoin = "#xonotic"
+quakenet.autojoin = "#xonotic,#xonotic.pickup"
 quakenet.autorejoin
 quakenet.autorejoin_delay
 quakenet.connection_timeout
