--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -182,11 +182,11 @@ lyrics_directory = ~/.config/ncmpcpp/lyrics
 ## Note: colors can be nested.
 ##
 #
-#song_list_format = {%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
+song_list_format = {%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
 #
-#song_status_format = {{%a{ "%b"{ (%y)}} - }{%t}}|{%f}
+song_status_format = {{%a{ "%b"{ (%y)}} - }{%t}}|{%f}
 #
-#song_library_format = {%n - }{%t}|{%f}
+song_library_format = {%n - }{%t}|{%f}
 #
 #alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
 #
@@ -262,7 +262,7 @@ current_item_inactive_column_suffix = $/r$(end)
 ##   available.
 ##
 #
-#song_columns_list_format = (20)[]{a} (6f)[green]{NE} (50)[white]{t|f:Title} (20)[cyan]{b} (7f)[magenta]{l}
+song_columns_list_format = (20)[green]{a} (50)[red]{t|f:Title} (20)[cyan]{b} (7f)[magenta]{l}
 #
 ##### various settings #####
 #
@@ -301,7 +301,7 @@ current_item_inactive_column_suffix = $/r$(end)
 #
 #discard_colors_if_item_is_selected = yes
 #
-#show_duplicate_tags = true
+show_duplicate_tags = no
 #
 #incremental_seeking = yes
 #
@@ -317,7 +317,7 @@ current_item_inactive_column_suffix = $/r$(end)
 ## Note: You can specify third character which will be used to build 'empty'
 ## part of progressbar.
 ##
-progressbar_look = =>
+progressbar_look = "=> "
 #
 ## Available values: database, playlist.
 ##
@@ -448,7 +448,7 @@ media_library_primary_tag = album_artist
 #
 #empty_tag_marker = <empty>
 #
-#tags_separator = " | "
+tags_separator = " | "
 #
 #tag_editor_extended_numeration = no
 #
