--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,4 +1,5 @@
 cache-default=3000000
 cache-secs=3600
 sub-auto=fuzzy
-ytdl-format=bestvideo[height<=?1080][protocol!=http_dash_segments]+bestaudio/best
+ytdl-format=bestvideo[height<=?720][protocol!=http_dash_segments]+bestaudio/best
+volume=30
