--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/.config/vim/bundle/todo.txt-vim"]
 	path = vim/.config/vim/bundle/todo.txt-vim
 	url = git@github.com:freitass/todo.txt-vim.git
+[submodule "vim/.config/vim/bundle/table-mode"]
+	path = vim/.config/vim/bundle/table-mode
+	url = git@github.com:dhruvasagar/vim-table-mode.git
