--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -60,7 +60,6 @@ bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
-bindsym $mod+grave workspace back_and_forth
 
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
@@ -121,7 +120,10 @@ bindsym $mod+c mode "builtin"
 # |____/ \__,_|_|   
 #                   
 
+
 set_from_resource $bar_font i3bar.font pango:Misc Ohsnap 15
+
+set $trans_bg #000000B0
 
 bar {
     status_command i3blocks
@@ -130,14 +132,16 @@ bar {
 
     font $bar_font
 
+    i3bar_command i3bar -t
+
     colors {
-        background $background
+        background $trans_bg
         statusline $foreground
 
-        focused_workspace $background $background $foreground
-        active_workspace $background $background $foreground
-        inactive_workspace $background $background $colour_grey
-        urgent_workspace $background $background $colour_red
+        focused_workspace $trans_bg $trans_bg $foreground
+        active_workspace $trans_bg $trans_bg $foreground
+        inactive_workspace $trans_bg $trans_bg $colour_grey
+        urgent_workspace $trans_bg $trans_bg $colour_red
     }
 }
 
@@ -148,9 +152,8 @@ bar {
 #   |_| |_| |_|\___|_| |_| |_|_|_| |_|\__, |
 #                                     |___/ 
 
-new_window 1pixel
+new_window pixel 1
 hide_edge_borders both
-workspace_auto_back_and_forth yes
 
 #     _            _                                  _       
 #    / \   ___ ___(_) __ _ _ __  _ __ ___   ___ _ __ | |_ ___ 
@@ -159,14 +162,14 @@ workspace_auto_back_and_forth yes
 # /_/   \_\___/___/_|\__, |_| |_|_| |_| |_|\___|_| |_|\__|___/
 #                    |___/                                    
 
-for_window [class="^qutebrowser$"] move --no-auto-back-and-forth to workspace number 1
-for_window [title="^Weechat$"] move --no-auto-back-and-forth workspace number 2
-for_window [title="^mutt$"] move --no-auto-back-and-forth workspace number 3
-for_window [title="^Deluge$"] move --no-auto-back-and-forth workspace number 8
-for_window [title="^Mumble"] move --no-auto-back-and-forth workspace number 8
-for_window [title="^Bitcoin Core - Wallet"] move --no-auto-back-and-forth workspace number 8
-for_window [title="^Counter-Strike Source - OpenGL"] move --no-auto-back-and-forth workspace number 9
-for_window [class="^Steam$"] move --no-auto-back-and-forth workspace number 10
+assign [class="^qutebrowser$"] workspace 1
+assign [title="^Weechat$"] workspace 2
+assign [title="^mutt$"] workspace 3
+assign [title="^Deluge$"] workspace 8
+assign [title="^Mumble"] workspace 8
+assign [title="^Bitcoin Core - Wallet"] workspace 8
+assign [title="^Counter-Strike Source - OpenGL"] workspace 9
+assign [class="^Steam$"] workspace 10
 
 # XXX The above is a hack! Remove when issue https://github.com/i3/i3/issues/2590 is closed.  XXX
 
@@ -176,3 +179,54 @@ for_window [title="^rofi-ssh$"] floating enable
 for_window [title="^feh-qrcode$"] floating enable
 for_window [class = "soffice" title="^Text Import - "] floating enable
 for_window [title="REQUEST_FLOATING_WINDOW"] floating enable
+
+
+#   ____                 
+#  / ___| __ _ _ __  ___ 
+# | |  _ / _` | '_ \/ __|
+# | |_| | (_| | |_) \__ \
+#  \____|\__,_| .__/|___/
+#             |_|        
+
+smart_gaps on
+smart_borders on
+gaps inner 5
+
+set $mode_gaps Gaps: (o) outer, (i) inner
+set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+bindsym $mod+Shift+g mode "$mode_gaps"
+
+mode "$mode_gaps" {
+        bindsym o      mode "$mode_gaps_outer"
+        bindsym i      mode "$mode_gaps_inner"
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+mode "$mode_gaps_inner" {
+        bindsym plus  gaps inner current plus 5
+        bindsym minus gaps inner current minus 5
+        bindsym 0     gaps inner current set 0
+
+        bindsym Shift+plus  gaps inner all plus 5
+        bindsym Shift+minus gaps inner all minus 5
+        bindsym Shift+0     gaps inner all set 0
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_outer" {
+        bindsym plus  gaps outer current plus 5
+        bindsym minus gaps outer current minus 5
+        bindsym 0     gaps outer current set 0
+
+        bindsym Shift+plus  gaps outer all plus 5
+        bindsym Shift+minus gaps outer all minus 5
+        bindsym Shift+0     gaps outer all set 0
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+mouse_warping none
