mpv: Change cache, ytdl res, screenshot dir

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,13 @@
-cache-default=3000000
-cache-secs=3600
+cache-default=50000
+cache-secs=100
+cache-file=TMP
 sub-auto=fuzzy
-ytdl-format=bestvideo[height<=?720][protocol!=http_dash_segments]+bestaudio/best
+ytdl-format=bestvideo[height<=?1080][protocol!=http_dash_segments]+bestaudio/best
 volume=30
+profile=opengl-hq
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
+
+screenshot-png-compression=3
+screenshot-template="%F %P"
+screenshot-directory=/home/jack/dl
