qutebrowser: Spawn mpv directly.
Also some automatic changes that are kinda annoying. This should be
fixed with config revolution when I move my entire conf to python or
YAML.

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -171,7 +171,7 @@ hint links download
 hint inputs
     ;t
 
-hint links fill :spawn mpv {hint-url}
+hint links spawn mpv {hint-url}
     ;m
 
 scroll left
@@ -373,9 +373,6 @@ follow-selected -t
     <ctrl-return>
     <ctrl-enter>
 
-repeat-command
-    .
-
 set-cmd-text -s :quickmark-load -t
     B
 
@@ -453,6 +450,10 @@ tab-focus -1
 
 tab-pin
     <ctrl-p>
+
+spawn --userscript custom_keybinding
+    .
+
 
 [insert]
 # Keybindings for insert mode.
@@ -690,4 +691,3 @@ scroll up
 
 scroll right
     L
-
