--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -129,19 +129,12 @@ print-element-backgrounds = true
 #     Default: false
 xss-auditing = false
 
-# site-specific-quirks (Bool):
-#     Enable QtWebKit workarounds for broken sites.
-#     Valid values: true, false
-#     Default: true
-site-specific-quirks = true
-
 # default-encoding (String):
 #     Default encoding to use for websites.
 #     The encoding must be a string describing an encoding such as
-#     _utf-8_, _iso-8859-1_, etc. If left empty a default value will be
-#     used.
-#     Default:
-default-encoding = 
+#     _utf-8_, _iso-8859-1_, etc.
+#     Default: iso-8859-1
+default-encoding = iso-8859-1
 
 # new-instance-open-target (String):
 #     How to open links in an existing instance if a new one is
@@ -279,11 +272,6 @@ user-stylesheet =
 #     Default: true
 hide-scrollbar = true
 
-# css-media-type (String):
-#     Set the CSS media type.
-#     Default:
-css-media-type = 
-
 # smooth-scrolling (Bool):
 #     Whether to enable smooth scrolling for web pages. Note smooth
 #     scrolling does not work with the :scroll-px command.
@@ -320,6 +308,7 @@ statusbar-padding = 0,0,0,0
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
 #     * `{backend}`: Either 'webkit' or 'webengine'
+#     * `{private}` : Indicates when private mode is enabled.
 #     Default: {perc}{title}{title_sep}qutebrowser
 window-title-format = {perc}{title}{title_sep}qutebrowser
 
@@ -392,8 +381,6 @@ user-agent =
 #     The proxy to use.
 #     In addition to the listed values, you can use a `socks://...` or
 #     `http://...` URL.
-#     This setting only works with Qt 5.8 or newer when using the
-#     QtWebEngine backend.
 #         system: Use the system wide proxy.
 #         none: Don't use any proxy
 #     Default: system
@@ -468,8 +455,8 @@ cmd-history-max-items = 10000
 # web-history-max-items (Int):
 #     How many URLs to show in the web history.
 #     0: no history / -1: unlimited
-#     Default: 1000
-web-history-max-items = 100
+#     Default: -1
+web-history-max-items = -1
 
 # quick-complete (Bool):
 #     Whether to move on to the next part when there's only one possible
@@ -708,6 +695,7 @@ tabs-are-windows = false
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
 #     * `{backend}`: Either 'webkit' or 'webengine'
+#     * `{private}` : Indicates when private mode is enabled.
 #     Default: {index}: {title}
 title-format = {index}: {title}
 
@@ -770,39 +758,10 @@ remember-download-directory = true
 #     resuming up to _n_ pages.
 #     For more information about the feature, please refer to:
 #     http://webkit.org/blog/427/webkit-page-cache-i-the-basics/
-#     Default:
-maximum-pages-in-cache = 
+#     Default: 0
+maximum-pages-in-cache = 0
 
-# object-cache-capacities (List of WebKitBytes):
-#     The capacities for the global memory cache for dead objects such
-#     as stylesheets or scripts. Syntax: cacheMinDeadCapacity,
-#     cacheMaxDead, totalCapacity.
-#     The _cacheMinDeadCapacity_ specifies the minimum number of bytes
-#     that dead objects should consume when the cache is under pressure.
-#     _cacheMaxDead_ is the maximum number of bytes that dead objects
-#     should consume when the cache is *not* under pressure.
-#     _totalCapacity_ specifies the maximum number of bytes that the
-#     cache should consume *overall*.
-#     Default:
-object-cache-capacities = 
-
-# offline-storage-default-quota (WebKitBytes):
-#     Default quota for new offline storage databases.
-#     Default:
-offline-storage-default-quota = 
-
-# offline-web-application-cache-quota (WebKitBytes):
-#     Quota for the offline web application cache.
-#     Default:
-offline-web-application-cache-quota = 
-
-# offline-storage-database (Bool):
-#     Whether support for the HTML 5 offline storage feature is enabled.
-#     Valid values: true, false
-#     Default: true
-offline-storage-database = true
-
-# offline-web-application-storage (Bool):
+# offline-web-application-cache (Bool):
 #     Whether support for the HTML 5 web application cache feature is
 #     enabled.
 #     An application cache acts like an HTTP cache in some sense. For
@@ -813,10 +772,10 @@ offline-storage-database = true
 #     http://dev.w3.org/html5/spec/Overview.html#appcache
 #     Valid values: true, false
 #     Default: true
-offline-web-application-storage = true
+offline-web-application-cache = true
 
 # local-storage (Bool):
-#     Whether support for the HTML 5 local storage feature is enabled.
+#     Whether support for HTML 5 local storage and Web SQL is enabled.
 #     Valid values: true, false
 #     Default: true
 local-storage = true
@@ -855,12 +814,6 @@ allow-plugins = false
 #     Valid values: true, false
 #     Default: true
 webgl = false
-
-# css-regions (Bool):
-#     Enable or disable support for CSS regions.
-#     Valid values: true, false
-#     Default: true
-css-regions = true
 
 # hyperlink-auditing (Bool):
 #     Enable or disable hyperlink auditing (<a ping>).
@@ -1002,7 +955,7 @@ border = 1px solid #E3BE23
 #         word: Use hints words based on the html elements and the extra
 #     words.
 #     Default: letter
-mode = word
+mode = number
 
 # chars (UniqueCharString):
 #     Chars used for hint strings.
@@ -1525,12 +1478,12 @@ prompts.selected.bg = #308cc6
 #     Default: xos4 Terminus, Terminus, Monospace, "DejaVu Sans Mono",
 #     Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New",
 #     Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
-_monospace = "tamsyn", Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
+_monospace = tamsyn
 
 # completion (Font):
 #     Font used in the completion widget.
 #     Default: 8pt ${_monospace}
-completion = 8pt ${_monospace}
+completion = 13pt ${_monospace}
 
 # completion.category (Font):
 #     Font used in the completion categories.
@@ -1540,17 +1493,17 @@ completion.category = bold ${completion}
 # tabbar (QtFont):
 #     Font used in the tab bar.
 #     Default: 8pt ${_monospace}
-tabbar = 8pt ${_monospace}
+tabbar = 13pt ${_monospace}
 
 # statusbar (Font):
 #     Font used in the statusbar.
 #     Default: 8pt ${_monospace}
-statusbar = 8pt ${_monospace}
+statusbar = 13pt ${_monospace}
 
 # downloads (Font):
 #     Font used for the downloadbar.
 #     Default: 8pt ${_monospace}
-downloads = 8pt ${_monospace}
+downloads = 13pt ${_monospace}
 
 # hints (Font):
 #     Font used for the hints.
@@ -1560,12 +1513,12 @@ hints = bold 13px Terminus
 # debug-console (QtFont):
 #     Font used for the debugging console.
 #     Default: 8pt ${_monospace}
-debug-console = 8pt ${_monospace}
+debug-console = 13pt ${_monospace}
 
 # web-family-standard (FontFamily):
 #     Font family for standard fonts.
 #     Default:
-web-family-standard = 
+web-family-standard = sans
 
 # web-family-fixed (FontFamily):
 #     Font family for fixed fonts.
@@ -1594,43 +1547,43 @@ web-family-fantasy =
 
 # web-size-minimum (Int):
 #     The hard minimum font size.
-#     Default:
-web-size-minimum = 
+#     Default: 0
+web-size-minimum = 0
 
 # web-size-minimum-logical (Int):
 #     The minimum logical font size that is applied when zooming out.
-#     Default:
-web-size-minimum-logical = 
+#     Default: 6
+web-size-minimum-logical = 6
 
 # web-size-default (Int):
 #     The default font size for regular text.
-#     Default:
-web-size-default = 
+#     Default: 16
+web-size-default = 16
 
 # web-size-default-fixed (Int):
 #     The default font size for fixed-pitch text.
-#     Default:
-web-size-default-fixed = 
+#     Default: 13
+web-size-default-fixed = 13
 
 # keyhint (Font):
 #     Font used in the keyhint widget.
 #     Default: 8pt ${_monospace}
-keyhint = 8pt ${_monospace}
+keyhint = 13pt ${_monospace}
 
 # messages.error (Font):
 #     Font used for error messages.
 #     Default: 8pt ${_monospace}
-messages.error = 8pt ${_monospace}
+messages.error = 13pt ${_monospace}
 
 # messages.warning (Font):
 #     Font used for warning messages.
 #     Default: 8pt ${_monospace}
-messages.warning = 8pt ${_monospace}
+messages.warning = 13pt ${_monospace}
 
 # messages.info (Font):
 #     Font used for info messages.
 #     Default: 8pt ${_monospace}
-messages.info = 8pt ${_monospace}
+messages.info = 13pt ${_monospace}
 
 # prompts (Font):
 #     Font used for prompts.
