weechat: Auto updates.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -222,7 +222,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot,#transmission,#linageos,#beets #android #cyanogenmod"
+freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot,#transmission,#linageos,#beets,#pandoc #android #cyanogenmod"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -275,7 +275,7 @@ furnet.msg_part
 furnet.msg_quit
 furnet.notify
 twitch.addresses = "irc.chat.twitch.tv/6667"
-twitch.proxy = "tor"
+twitch.proxy = ""
 twitch.ipv6
 twitch.ssl = off
 twitch.ssl_cert
@@ -302,7 +302,7 @@ twitch.local_hostname
 twitch.usermode
 twitch.command
 twitch.command_delay
-twitch.autojoin = "#nerdcubed,#rossbroadcast"
+twitch.autojoin = "#nerdcubed,#rossbroadcast,#twitchpresents"
 twitch.autorejoin
 twitch.autorejoin_delay
 twitch.connection_timeout
@@ -542,7 +542,7 @@ rizon.local_hostname
 rizon.usermode
 rizon.command
 rizon.command_delay
-rizon.autojoin = "#3dshacks"
+rizon.autojoin = "#3dshacks,#myanimelist"
 rizon.autorejoin
 rizon.autorejoin_delay
 rizon.connection_timeout
