--- a/weechat/.config/weechat/weechat.conf
+++ b/weechat/.config/weechat/weechat.conf
@@ -240,7 +240,7 @@ gnutls_handshake_timeout = 30
 proxy_curl = ""
 
 [plugin]
-autoload = "*"
+autoload = "*,!buflist"
 debug = off
 extension = ".so,.dll"
 path = "%h/plugins"
@@ -406,6 +406,8 @@ ctrl-Wv = "/window splitv"
 ctrl-Wx = "/window swap"
 ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
+meta-meta-OP = "/bar scroll buflist * b"
+meta-meta-OQ = "/bar scroll buflist * e"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -439,6 +441,8 @@ meta-OC = "/input move_next_word"
 meta-OD = "/input move_previous_word"
 meta-OF = "/input move_end_of_line"
 meta-OH = "/input move_beginning_of_line"
+meta-OP = "/bar scroll buflist * -100%"
+meta-OQ = "/bar scroll buflist * +100%"
 meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
