mpv: Save pos on quit, reduce cache more.

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,5 @@
-cache-default=50000
-cache-secs=100
+cache-default=500
+cache-secs=10
 cache-file=TMP
 sub-auto=fuzzy
 ytdl-format=bestvideo[height<=?1080][protocol!=http_dash_segments]+bestaudio/best
@@ -11,3 +11,5 @@ cscale=ewa_lanczossharp
 screenshot-png-compression=3
 screenshot-template="%F %P"
 screenshot-directory=/home/jack/dl
+save-position-on-quit
+write-filename-in-watch-later-config
