weechat: migrate to ZNC

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -89,9 +89,9 @@ ban_mask_default = "*!$ident@$host"
 channel_encode = off
 colors_receive = off
 colors_send = off
-lag_check = 60
+lag_check = 20
 lag_max = 600
-lag_min_show = 1500
+lag_min_show = 60000
 lag_reconnect = 120
 lag_refresh_interval = 1
 notify_check_ison = 1
@@ -112,7 +112,7 @@ ignore = freenode;#qutebrowser;^qutebrowser-gh$
 ignore = *;*;^SubWatch$
 
 [server_default]
-addresses = ""
+addresses = "localhost/1337"
 anti_flood_prio_high = 2
 anti_flood_prio_low = 2
 autoconnect = on
@@ -144,10 +144,10 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
-ssl = off
+ssl = on
 ssl_cert = "%h/ssl/irc-5225225.pem"
 ssl_dhkey_size = 2048
-ssl_fingerprint = ""
+ssl_fingerprint = "93d63141f30734bdc05501eee8f4dc3f4c158bee"
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
 usermode = ""
@@ -182,7 +182,7 @@ foonetic.local_hostname
 foonetic.usermode
 foonetic.command
 foonetic.command_delay
-foonetic.autojoin = "#xkcd,#bucket,#bucketlog,#xkcd-signal,#xkcd-noise,#xkcd-minecraft,#xkcd-compsci"
+foonetic.autojoin = ""
 foonetic.autorejoin
 foonetic.autorejoin_delay
 foonetic.connection_timeout
@@ -194,23 +194,23 @@ foonetic.msg_kick
 foonetic.msg_part
 foonetic.msg_quit
 foonetic.notify
-freenode.addresses = "freenodeok2gncmy.onion/6697"
-freenode.proxy = "tor"
+freenode.addresses
+freenode.proxy
 freenode.ipv6
-freenode.ssl = on
+freenode.ssl
 freenode.ssl_cert
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
 freenode.ssl_fingerprint
-freenode.ssl_verify = off
-freenode.password
+freenode.ssl_verify
+freenode.password = "jack@desktop/freenode:"
 freenode.capabilities
-freenode.sasl_mechanism = external
+freenode.sasl_mechanism
 freenode.sasl_username
 freenode.sasl_password
 freenode.sasl_key
 freenode.sasl_timeout
-freenode.sasl_fail = disconnect
+freenode.sasl_fail
 freenode.autoconnect
 freenode.autoreconnect
 freenode.autoreconnect_delay
@@ -222,7 +222,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot,#transmission,#linageos,#beets,#pandoc #android #cyanogenmod"
+freenode.autojoin = ""
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -234,20 +234,20 @@ freenode.msg_kick
 freenode.msg_part
 freenode.msg_quit
 freenode.notify
-furnet.addresses = "lynx.furnet.org/6697"
+furnet.addresses = "localhost/1337"
 furnet.proxy
 furnet.ipv6
 furnet.ssl = on
 furnet.ssl_cert
 furnet.ssl_priorities
 furnet.ssl_dhkey_size
-furnet.ssl_fingerprint = "4bd7170f6af79faa35d89734f54a0f601670e51e"
+furnet.ssl_fingerprint
 furnet.ssl_verify
-furnet.password = "${sec.data.furnet}"
+furnet.password = "jack@desktop/furnet:"
 furnet.capabilities
 furnet.sasl_mechanism
 furnet.sasl_username
-furnet.sasl_password = "${sec.data.furnet}"
+furnet.sasl_password
 furnet.sasl_key
 furnet.sasl_timeout
 furnet.sasl_fail
@@ -262,7 +262,7 @@ furnet.local_hostname
 furnet.usermode
 furnet.command
 furnet.command_delay
-furnet.autojoin = "#SoftPaws"
+furnet.autojoin = ""
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -274,56 +274,16 @@ furnet.msg_kick
 furnet.msg_part
 furnet.msg_quit
 furnet.notify
-twitch.addresses = "irc.chat.twitch.tv/6667"
-twitch.proxy = ""
-twitch.ipv6
-twitch.ssl = off
-twitch.ssl_cert
-twitch.ssl_priorities
-twitch.ssl_dhkey_size
-twitch.ssl_fingerprint
-twitch.ssl_verify
-twitch.password = "${sec.data.twitch}"
-twitch.capabilities
-twitch.sasl_mechanism
-twitch.sasl_username
-twitch.sasl_password
-twitch.sasl_key
-twitch.sasl_timeout
-twitch.sasl_fail
-twitch.autoconnect
-twitch.autoreconnect
-twitch.autoreconnect_delay
-twitch.nicks = "5225225"
-twitch.nicks_alternate
-twitch.username
-twitch.realname
-twitch.local_hostname
-twitch.usermode
-twitch.command
-twitch.command_delay
-twitch.autojoin = "#nerdcubed,#rossbroadcast,#twitchpresents"
-twitch.autorejoin
-twitch.autorejoin_delay
-twitch.connection_timeout
-twitch.anti_flood_prio_high
-twitch.anti_flood_prio_low
-twitch.away_check
-twitch.away_check_max_nicks
-twitch.msg_kick
-twitch.msg_part
-twitch.msg_quit
-twitch.notify
-nixers.addresses = "unix.chat/6697"
+nixers.addresses
 nixers.proxy
 nixers.ipv6
-nixers.ssl = on
+nixers.ssl
 nixers.ssl_cert
 nixers.ssl_priorities
 nixers.ssl_dhkey_size
 nixers.ssl_fingerprint
 nixers.ssl_verify
-nixers.password = "${sec.data.nixers}"
+nixers.password = "jack@desktop/nixers:"
 nixers.capabilities
 nixers.sasl_mechanism
 nixers.sasl_username
@@ -334,7 +294,7 @@ nixers.sasl_fail
 nixers.autoconnect
 nixers.autoreconnect
 nixers.autoreconnect_delay
-nixers.nicks = "i522"
+nixers.nicks
 nixers.nicks_alternate
 nixers.username
 nixers.realname
@@ -342,7 +302,7 @@ nixers.local_hostname
 nixers.usermode
 nixers.command
 nixers.command_delay
-nixers.autojoin = "#unix"
+nixers.autojoin = ""
 nixers.autorejoin
 nixers.autorejoin_delay
 nixers.connection_timeout
@@ -354,127 +314,7 @@ nixers.msg_kick
 nixers.msg_part
 nixers.msg_quit
 nixers.notify
-bitlbee.addresses = "localhost"
-bitlbee.proxy
-bitlbee.ipv6
-bitlbee.ssl = off
-bitlbee.ssl_cert
-bitlbee.ssl_priorities
-bitlbee.ssl_dhkey_size
-bitlbee.ssl_fingerprint
-bitlbee.ssl_verify
-bitlbee.password = "password"
-bitlbee.capabilities
-bitlbee.sasl_mechanism
-bitlbee.sasl_username
-bitlbee.sasl_password
-bitlbee.sasl_key
-bitlbee.sasl_timeout
-bitlbee.sasl_fail
-bitlbee.autoconnect
-bitlbee.autoreconnect
-bitlbee.autoreconnect_delay
-bitlbee.nicks
-bitlbee.nicks_alternate
-bitlbee.username
-bitlbee.realname
-bitlbee.local_hostname
-bitlbee.usermode
-bitlbee.command
-bitlbee.command_delay
-bitlbee.autojoin = "&bitlbee,#twitter_zamjnw5,&steam"
-bitlbee.autorejoin
-bitlbee.autorejoin_delay
-bitlbee.connection_timeout
-bitlbee.anti_flood_prio_high
-bitlbee.anti_flood_prio_low
-bitlbee.away_check
-bitlbee.away_check_max_nicks
-bitlbee.msg_kick
-bitlbee.msg_part
-bitlbee.msg_quit
-bitlbee.notify
-overthewire.addresses = "ircs.overthewire.org/6697"
-overthewire.proxy = "tor"
-overthewire.ipv6
-overthewire.ssl = on
-overthewire.ssl_cert
-overthewire.ssl_priorities
-overthewire.ssl_dhkey_size
-overthewire.ssl_fingerprint
-overthewire.ssl_verify
-overthewire.password
-overthewire.capabilities
-overthewire.sasl_mechanism
-overthewire.sasl_username
-overthewire.sasl_password
-overthewire.sasl_key
-overthewire.sasl_timeout
-overthewire.sasl_fail
-overthewire.autoconnect
-overthewire.autoreconnect
-overthewire.autoreconnect_delay
-overthewire.nicks
-overthewire.nicks_alternate
-overthewire.username
-overthewire.realname
-overthewire.local_hostname
-overthewire.usermode
-overthewire.command
-overthewire.command_delay
-overthewire.autojoin
-overthewire.autorejoin
-overthewire.autorejoin_delay
-overthewire.connection_timeout
-overthewire.anti_flood_prio_high
-overthewire.anti_flood_prio_low
-overthewire.away_check
-overthewire.away_check_max_nicks
-overthewire.msg_kick
-overthewire.msg_part
-overthewire.msg_quit
-overthewire.notify
-oftc.addresses = "irc.oftc.net"
-oftc.proxy = "tor"
-oftc.ipv6
-oftc.ssl
-oftc.ssl_cert
-oftc.ssl_priorities
-oftc.ssl_dhkey_size
-oftc.ssl_fingerprint
-oftc.ssl_verify
-oftc.password
-oftc.capabilities
-oftc.sasl_mechanism
-oftc.sasl_username
-oftc.sasl_password
-oftc.sasl_key
-oftc.sasl_timeout
-oftc.sasl_fail
-oftc.autoconnect
-oftc.autoreconnect
-oftc.autoreconnect_delay
-oftc.nicks
-oftc.nicks_alternate
-oftc.username
-oftc.realname
-oftc.local_hostname
-oftc.usermode
-oftc.command
-oftc.command_delay
-oftc.autojoin
-oftc.autorejoin
-oftc.autorejoin_delay
-oftc.connection_timeout
-oftc.anti_flood_prio_high
-oftc.anti_flood_prio_low
-oftc.away_check
-oftc.away_check_max_nicks
-oftc.msg_kick
-oftc.msg_part
-oftc.msg_quit
-oftc.notify
-quakenet.addresses = "azubu.uk.quakenet.org"
+quakenet.addresses
 quakenet.proxy
 quakenet.ipv6
 quakenet.ssl
@@ -483,7 +323,7 @@ quakenet.ssl_priorities
 quakenet.ssl_dhkey_size
 quakenet.ssl_fingerprint
 quakenet.ssl_verify
-quakenet.password = "MV5QxisMpR"
+quakenet.password = "jack@desktop/quakenet:"
 quakenet.capabilities
 quakenet.sasl_mechanism
 quakenet.sasl_username
@@ -502,7 +342,7 @@ quakenet.local_hostname
 quakenet.usermode
 quakenet.command
 quakenet.command_delay
-quakenet.autojoin = "#xonotic,#xonotic.pickup"
+quakenet.autojoin = ""
 quakenet.autorejoin
 quakenet.autorejoin_delay
 quakenet.connection_timeout
@@ -514,16 +354,56 @@ quakenet.msg_kick
 quakenet.msg_part
 quakenet.msg_quit
 quakenet.notify
-rizon.addresses = "irc.rizon.net/9999"
+twitch.addresses
+twitch.proxy
+twitch.ipv6
+twitch.ssl
+twitch.ssl_cert
+twitch.ssl_priorities
+twitch.ssl_dhkey_size
+twitch.ssl_fingerprint
+twitch.ssl_verify
+twitch.password = "jack@desktop/twitch:"
+twitch.capabilities
+twitch.sasl_mechanism
+twitch.sasl_username
+twitch.sasl_password
+twitch.sasl_key
+twitch.sasl_timeout
+twitch.sasl_fail
+twitch.autoconnect
+twitch.autoreconnect
+twitch.autoreconnect_delay
+twitch.nicks
+twitch.nicks_alternate
+twitch.username
+twitch.realname
+twitch.local_hostname
+twitch.usermode
+twitch.command
+twitch.command_delay
+twitch.autojoin = ""
+twitch.autorejoin
+twitch.autorejoin_delay
+twitch.connection_timeout
+twitch.anti_flood_prio_high
+twitch.anti_flood_prio_low
+twitch.away_check
+twitch.away_check_max_nicks
+twitch.msg_kick
+twitch.msg_part
+twitch.msg_quit
+twitch.notify
+rizon.addresses
 rizon.proxy
 rizon.ipv6
-rizon.ssl = on
+rizon.ssl
 rizon.ssl_cert
 rizon.ssl_priorities
 rizon.ssl_dhkey_size
 rizon.ssl_fingerprint
 rizon.ssl_verify
-rizon.password
+rizon.password = "jack@desktop/rizon:"
 rizon.capabilities
 rizon.sasl_mechanism
 rizon.sasl_username
@@ -542,7 +422,7 @@ rizon.local_hostname
 rizon.usermode
 rizon.command
 rizon.command_delay
-rizon.autojoin = "#3dshacks,#myanimelist"
+rizon.autojoin = ""
 rizon.autorejoin
 rizon.autorejoin_delay
 rizon.connection_timeout
