--- a/weechat/.config/weechat/plugins.conf
+++ b/weechat/.config/weechat/plugins.conf
@@ -85,7 +85,7 @@ python.apply_corrections.data_timeout = "60"
 python.apply_corrections.message_limit = "2"
 python.apply_corrections.print_format = "[nick]: [corrected]"
 python.apply_corrections.print_limit = "1"
-python.autojoin.autosave = "on"
+python.autojoin.autosave = "off"
 python.bitlbee_typing_notice.channel = "&bitlbee"
 python.bitlbee_typing_notice.server = "bitlbee"
 python.bitlbee_typing_notice.timeout = "30"
