mpv: Keep open, add stats.

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -13,3 +13,4 @@ screenshot-template="%F %P"
 screenshot-directory=/home/jack/dl
 save-position-on-quit
 write-filename-in-watch-later-config
+keep-open=yes
