--- a/beets/.config/beets/config.yaml
+++ b/beets/.config/beets/config.yaml
@@ -3,7 +3,7 @@ library: ~/media/music/library.blb
 
 import:
     write: yes
-    move: yes
+    copy: yes
     languages: en
     timid: no
     log: ~/media/music/beets-import.log
