--- a/i3blocks/.config/i3blocks/config
+++ b/i3blocks/.config/i3blocks/config
@@ -24,7 +24,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/home/jack/.config/i3blocks/$BLOCK_NAME
+command=/home/jess/.config/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 interval=1
@@ -53,28 +53,9 @@ color=#7cafc2
 interval=3600
 color=#a1b56c
 
-[mail-home]
-command=/home/jack/.config/i3blocks/mail
-instance=home
-color=#7cafc2
-
-
-[mail-school]
-command=/home/jack/.config/i3blocks/mail
-instance=school
-color=#ab4642
-
-[mail-mailbox]
-command=/home/jack/.config/i3blocks/mail
-instance=mailbox
-color=#ffd204
-
-
 [mpd]
 markup=pango
 
 [battery]
-
-[idlelock]
 
 [time]
