--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -18,7 +18,7 @@ set_from_resource $colour_red  color1     #ab4642
 # |_|\_\___|\__, |_.__/|_|_| |_|\__,_|_|_| |_|\__, |___/
 #           |___/                             |___/     
 
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec ~/scripts/urxvt
 
 bindsym $mod+Shift+q kill
 
@@ -126,11 +126,12 @@ bindsym $mod+c mode "builtin"
 set $trans_bg #000000B0
 
 bar {
+    font pango:Misc Tamsyn 12
+
     status_command i3blocks
     Modifier Mod4
     position top
 
-    font $bar_font
 
     i3bar_command i3bar -t
 
